[project]
name = "tele-muninn"
version = "0.1.0"
description = "Collection of Telegram bots and utilities"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "requests",
    "beautifulsoup4",
    "slug",
    "python-dotenv",
    "schedule",
    "feedparser",
    "finviz",
    "exif",
    "dataset==1.6.2",
    "tweepy",
    "praw",
    "vaderSentiment",
    "py-executable-checklist==1.3.1",
    "peewee",
    "pyppeteer",
    "rich",
    "youtube-dl",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "pytube",
    "python-telegram-bot>=22.5",
]

[dependency-groups]
optional = [
    "gTTS",
    "openai",
    "pytube",
]
dev = [
    "black",
    "bpython",
    "pre-commit",
    "flake8",
    "commitizen",
    "pycco",
    "autoflake",
    "isort",
    "pyupgrade",
    "openai-whisper @ git+https://github.com/openai/whisper.git",
    "snscrape @ git+https://github.com/JustAnotherArchivist/snscrape.git",
    "httpx",
    "twikit",
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py37", "py38", "py39"]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | fireprofile
  | venv
  | temp
  | \.idea
  | generated
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
update_changelog_on_bump = true
